fixed a z-index

--- a/src/app/components/nav/nav-item/nav-item.component.scss
+++ b/src/app/components/nav/nav-item/nav-item.component.scss
@@ -12,6 +12,7 @@
     z-index: -1;
     transition: z-index 0s 0s, opacity 0.25s 0s;
     &.expanded {
+      z-index: 1;
       opacity: 1;
       transition: z-index 0.5s 0.5s, opacity 0.5s 0s;
     }
